add volume for postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,14 @@ services:
       POSTGRES_DB: meals
     ports:
       - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+
+volumes:
+  pgdata:
